--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,26 @@
+# Dependencies
+/node_modules
+/frontend/node_modules
+/backend/node_modules
+
+# Build output
+/frontend/dist
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment variables
+.env
+.env*.local
+/frontend/.env
+/backend/.env
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+# IDE files
 .idea
-.DS_Store
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
