--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "gestor-energia-backend",
+  "name": "gestor-energia-monorepo",
   "version": "1.0.0",
-  "description": "Backend server for the Energy Expense Manager application.",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "api",
-    "backend",
-    "energy",
-    "express"
+  "description": "Aplicação full-stack para gerenciamento de despesas de energia.",
+  "private": true,
+  "workspaces": [
+    "frontend",
+    "backend"
   ],
+  "scripts": {
+    "dev": "concurrently \"npm:dev -w backend\" \"npm:dev -w frontend\"",
+    "install:all": "npm install && npm install -w backend && npm install -w frontend",
+    "start": "npm run dev"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "git": "^0.1.5",
-    "mongodb": "^6.18.0",
-    "nodemailer": "^6.10.1"
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
