--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,22 @@
-# Dependencies
-/node_modules
-/frontend/node_modules
-/backend/node_modules
-
-# Build output
-/frontend/dist
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Environment variables
-.env
-.env*.local
-/frontend/.env
-/backend/.env
+node_modules
+dist
+dist-ssr
+*.local
 
-# IDE files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
-.vscode
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
