--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "name": "gestor-energia-frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.5",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
